[package]
name = "doscenario-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
dashmap = "5.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.1"
prost = "0.11.6"
rs-snowflake = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "uuid", "time"] }
tokio = { version = "1.25.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors", "tokio"]}

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "docs"
path = "docs/main.rs"

[lib]
name = "models"
path = "models/lib.rs"
